feat: 쿠키값들을 가변컬렉션으로 변경